# seal-rs

./: .gitignore  Cargo.toml  README.md
src/: chunk.rs  error.rs  ext.rs  main.rs
src/cli/: action.rs  cli.rs  config.rs  guard.rs  mod.rs  util.rs
src/core/: chunk.rs  ext.rs  header.rs  mod.rs  util.rs
src/file/: chunk.rs  ext.rs  file.rs  header.rs  mod.rs
