[package]
name = "seal"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
clap = { version = "4.6.0", features = ["derive"] }
rand = "0.10"
zeroize = { version = "1.8", features = ["derive"] }

[profile.release]
opt-level = "z"
strip = true
lto = "fat"
panic = "abort"
